--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
+    <ul>
+      <li><a href="./tasks/form.html">Form</a></li>
+      <li><a href="./tasks/generator.html">Generator</a></li>
+      <li><a href="./tasks/images-slider.html">Images Slider</a></li>
+      <li><a href="./tasks/shopping-list.html">Shopping List</a></li>
+      <li><a href="./tasks/theme-switcher.html">Theme Swithcer</a></li>
+      <li><a href="./tasks/to-do-list.html">To Do List</a></li>
+      <li><a href="./tasks/trecker.html">Trecker</a></li>
+    </ul>
 
     <script type="module" src="./main.js"></script>
   </body>
